fix cvc visibility

--- a/src/skins/default/styles.css
+++ b/src/skins/default/styles.css
@@ -244,6 +244,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255);
+  z-index: 2;
 }
 
 .payment-button-loader {
@@ -301,6 +302,7 @@
 }
 
 #cvvInput > svg {
+  z-index: 1;
   position: absolute;
   top: 5px;
   right: 5px;
